@@ -74,21 +74,23 @@ PAM_EXTERN int pam_sm_open_session(pam_handle_t * pamh, int flags,
 
 	D(("called."));
 
-	ctrl = _set_ctrl(flags, NULL, argc, argv);
+	ctrl = _set_ctrl(pamh, flags, NULL, argc, argv);
 
 	retval = pam_get_item(pamh, PAM_USER, (void *) &user_name);
 	if (user_name == NULL || retval != PAM_SUCCESS) {
-		_log_err(LOG_CRIT, "open_session - error recovering username");
+		_log_err(LOG_CRIT, pamh,
+		         "open_session - error recovering username");
 		return PAM_SESSION_ERR;		/* How did we get authenticated with
 						   no username?! */
 	}
 	retval = pam_get_item(pamh, PAM_SERVICE, (void *) &service);
 	if (service == NULL || retval != PAM_SUCCESS) {
-		_log_err(LOG_CRIT, "open_session - error recovering service");
+		_log_err(LOG_CRIT, pamh,
+		         "open_session - error recovering service");
 		return PAM_SESSION_ERR;
 	}
-	_log_err(LOG_INFO, "(%s) session opened for user %s by %s(uid=%d)"
-		 ,service, user_name
+	_log_err(LOG_INFO, pamh, "session opened for user %s by %s(uid=%d)"
+		 ,user_name
 		 ,PAM_getlogin() == NULL ? "" : PAM_getlogin(), getuid());
 
 	return PAM_SUCCESS;
@@ -103,21 +105,23 @@ PAM_EXTERN int pam_sm_close_session(pam_handle_t * pamh, int flags,
 
 	D(("called."));
 
-	ctrl = _set_ctrl(flags, NULL, argc, argv);
+	ctrl = _set_ctrl(pamh, flags, NULL, argc, argv);
 
 	retval = pam_get_item(pamh, PAM_USER, (void *) &user_name);
 	if (user_name == NULL || retval != PAM_SUCCESS) {
-		_log_err(LOG_CRIT, "close_session - error recovering username");
+		_log_err(LOG_CRIT, pamh,
+		         "close_session - error recovering username");
 		return PAM_SESSION_ERR;		/* How did we get authenticated with
 						   no username?! */
 	}
 	retval = pam_get_item(pamh, PAM_SERVICE, (void *) &service);
 	if (service == NULL || retval != PAM_SUCCESS) {
-		_log_err(LOG_CRIT, "close_session - error recovering service");
+		_log_err(LOG_CRIT, pamh,
+		         "close_session - error recovering service");
 		return PAM_SESSION_ERR;
 	}
-	_log_err(LOG_INFO, "(%s) session closed for user %s"
-		 ,service, user_name);
+	_log_err(LOG_INFO, pamh, "session closed for user %s"
+		 ,user_name);
 
 	return PAM_SUCCESS;
 }
